fix adding appointment related to schedule